# mmt-web2020

./: .dockerignore  .gitignore  Cargo.toml  README.md  backup.md  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  pointscore.rb  traefik.toml
.circleci/: config.example.yml  config.yml
admin/: .babelrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
admin-api/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  rustfmt.toml
admin-api/src/: lib.rs  routes.rs
admin-api/src.old/: db.rs  models.rs
admin-api/src/auth/: banned_set.rs  jwks.rs  jwt.rs  mod.rs  secret.rs
admin-api/src/db/: helpers.rs  mod.rs
admin-api/src/graphql/: context.rs  mutation_root.rs  query_root.rs  util.rs
admin-api/src/models/: booking.rs  mod.rs  payment.rs  ticket.rs  user.rs  utils.rs  vehicle.rs
admin-api/src/wire/: jwt.rs  mod.rs  transaction.rs  user.js  user.rs
admin/server/: .eslintrc.json  api.js  server.js  server.rs
admin/server/api/: activities.js  bookings.js  email.js  payments.js  stripe.js  teams.js  tickets.js
admin/server/lib/: activities.js  bookings.js  email.js  hello_world.js  payments.js  stripe.js  teams.js  tickets.js
admin/server/lib/auth/: jwt.js
admin/src/: .eslintrc.json  index.html  index.js
admin/src/actions/: activities.actions.js  auth.actions.js  auth0.actions.js  bookings.actions.js  index.js  liveUpdate.actions.js  stripe.actions.js  teams.actions.js  tickets.actions.js  window.actions.js
admin/src/components/: AddPayment.js  App.js  EmailSelector.js  TeamEditor.js  TicketEditor.js  VehicleEditor.js
admin/src/components/auth/: AuthenticationBroker.js  Callback.js  index.js
admin/src/components/common/: Title.js
admin/src/components/data/: BookingsByTime.js  Parade.js  ParadeItem.js  ParadeItemElement.js  TicketsByTime.js
admin/src/components/window/: Content.js  index.js
admin/src/components/window/sidebar/: Link.js  index.js
admin/src/components/window/topbar/: index.js
admin/src/context/: AuthContext.js  BookingContext.js  VehicleContext.js
admin/src/lib/data/: countCreatedAt.js
admin/src/lib/net/: api.js
admin/src/store/: index.js  initStore.js  initialState.js
admin/src/store/reducers/: activities.js  auth.js  bookings.js  index.js  liveUpdate.js  teams.js  window.js
admin/src/views/: Dashboard.js  DashboardParade.js  DashboardParadePoints.js  index.js  routes.js
admin/src/views/activity/: Activities.js  Activity.js  ActivityTable.js  ActivityTableDetails.js  TeamActivityTable.js  index.js
admin/src/views/bookings/: Booking.js  BookingTable.js  BookingTableDetails.js  Bookings.js  index.js
admin/src/views/diets/: Diet.js  DietTable.js  Diets.js  index.js
admin/src/views/payments/: BookingPaymentTable.js  PaymentTableDetails.js  Payments.js  StripePaymentTable.js  index.js
admin/src/views/teams/: Team.js  TeamTable.js  TeamTableDetails.js  Teams.js  index.js
admin/src/views/tickets/: AddTicket.js  Ticket.js  TicketTable.js  TicketTableDetails.js  Tickets.js  index.js
admin/src/views/vehicles/: Vehicle.js  VehicleTable.js  VehicleTableDetails.js  Vehicles.js  index.js
admin/tests/client/actions/: auth0.actions.test.js  bookings.actions.test.js
admin/tests/client/components/: App.test.js
admin/tests/client/components/auth/: AuthenticationBroker.test.js  Callback.test.js
admin/tests/client/components/data/: ParadeItem.test.js  TicketsByTime.test.js
admin/tests/client/components/window/: Root.test.js
admin/tests/client/lib/net/: api.test.js
admin/tests/client/reducers/: auth.test.js  bookings.test.js  window.test.js
admin/tests/server/lib/: hello_world.test.js
app-api/: Cargo.toml  schema.json
app-api/src/: auth.rs  custom_context.rs  errors.rs  main.rs  mutation_root.rs  query_root.rs
app-api/src/models/: admin_user.rs  booking.rs  event.rs  mod.rs  payment.rs  ticket.rs  user.rs  vehicle.rs
email/: Cargo.toml  Dockerfile  Dockerfile.prod  build.rs
email/src/: main.rs  transport.rs
email/src/models/: booking.rs  mod.rs  ticket.rs  user.rs  vehicle.rs
email/src/rpcimpl/: email.rs  mod.rs
email/templates/: email.html
email/templates/user/: notify_driver_new_passenger.html  onboard.html  team_update.html  verify_email.html
mmt/: Cargo.toml  build.rs
mmt-db/: Cargo.toml
mmt-db/src/: lib.rs
mmt-derive/: Cargo.toml
mmt-derive/src/: lib.rs
mmt/src/: lib.rs
rego-api/: .rustc_info.json  Cargo.toml  Dockerfile  Dockerfile.prod  Rocket.toml  schema.json
rego-api/src/: email.rs  lib.rs  routes.rs  stripe.rs
rego-api/src.old/: lib.rs  routes.rs
rego-api/src.old/graphql/: schema.rs
rego-api/src/db/: helpers.rs  mod.rs
rego-api/src/graphql/: context.rs  mod.rs  mutation_root.rs  query_root.rs  util.rs
rego-api/src/models/: booking.rs  mod.rs  payment.rs  ticket.rs  user.rs  utils.rs  vehicle.rs
rego-api/templates/: email.html
rego-api/templates/user/: verify_email.html
rego-new/: Cargo.toml  driver_add_vehicle.graphql  get_booking.graphql  main.js  new_user.graphql  passenger_add_vehicle.graphql  run.sh  schema.json  update_booking_tickets.graphql  verify_user.graphql
rego-new/graphql/: get_vehicle_driver.graphql  vehicle.graphql  vehicle_accept_ticket.graphql  vehicle_decline_ticket.graphql  vehicle_remove_ticket.graphql  verify_user.graphql
rego-new/less/: booking_summary.less  checkin.less  checkout.less  home.less  main.less  manage_vehicle.less  purchase.less  register.less
rego-new/src/: app.rs  booking_agent.rs  booking_summary.rs  checkin.rs  checkout.rs  confirm_email.rs  graphql.rs  home.rs  lib.rs  manage_vehicle.rs  new_booking_form.rs  purchase_tickets.rs  server.rs
server/: Cargo.toml  Rocket.toml
server/src/: lib.rs  main.rs
server/src/api/: mod.rs
server/src/authorization/: mod.rs
server/src/server/: mod.rs  payments.rs  teams.rs  tickets.rs
server/src/server/base/: logs.rs
server/src/types/: booking.rs  mod.rs  payment.rs  point_log.rs  team.rs  ticket.rs  user.rs
(+228 files in other folders)
