[package]
name = "app-api"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmt = { path = "../mmt" }
actix-web = "3"
actix-web-httpauth = "0.5"
actix-cors = "0.5"
actix-service = "2"
# chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# alcoholic_jwt = "1.0.0"
alcoholic_jwt = { git = "https://github.com/Dispersia/alcoholic_jwt.git", commit = "59158c7436e45b57ea51cef8e24e5869fa29e5d1" }
reqwest = { version = "0.11", features = ["json"] }
actix-rt = "2"
mongodb = "1.2"
juniper = "0.15"
bson = "1.0"
base64 = "0.13"
lazy_static = "1.4"
