[package]
name = "email"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmt = { path = "../mmt" }
tokio = { version = "0.2", features = ["macros"] }
mongodb = "1.0"
bson = "1.0"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.3"
tonic = "0.3"
lettre = "0.9"
lettre_email = "0.9"
askama = "0.10"
rand = "0.7"

[build-dependencies]
tonic-build = { version = "0.3", default-features = false, features = ["transport", "prost"] }
