[package]
name = "email"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "email"
path = "src/main.rs"

[dependencies]
mmt = { path = "../mmt" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mongodb = "2.0.0-beta"
bson = "2.0.0-beta"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.4"
lettre = "0.9"
lettre_email = "0.9"
askama = "0.10"
rand = "0.8"

[build-dependencies]
tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
