[package]
name = "mmt_db"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.2"
bson = "1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
