[package]
name = "mmt_db"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0-beta"
bson = "2.0.0-beta"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
