[package]
name = "mmt_derive"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
mmt_db = { path = "../mmt_db" }
syn = "1.0"
quote = "1.0"
