[package]
name = "mmt-api"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libmmtapi"

[[bin]]
path = "src/bin/main.rs"
name = "mmtapi"

[dependencies]
# rocket = "0.4.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false, features = ["json", "mongodb_pool"] }
rocket_cors = "0.5.1"
# rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "mongodb_pool"] }
bson = "0.14.0"
mongodb = "0.3"
# juniper = "0.14.2"
# juniper_rocket = "0.5"
juniper= { git="https://github.com/graphql-rust/juniper.git", rev="7e8724751f1264215068d66c91cc384884142caf" }
juniper_rocket_async = { git="https://github.com/graphql-rust/juniper.git", rev="7e8724751f1264215068d66c91cc384884142caf" }
stripe-rust = { version = "0.12.1", default-features = false, features = ["full", "async"] }
rand = "0.7"
lettre = { git = "https://github.com/lettre/lettre", rev = "a440ae5c79a18242a376deb0c28426ef092e32ab" }
email = { version = "^0.0.20" }
askama = "0.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.3"
futures = "0.3"
