[package]
name = "mmt-api"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libmmtapi"

[[bin]]
path = "src/bin/main.rs"
name = "mmtapi"

[dependencies]
# rocket = "0.4.2"
# rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false }
# rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false, features = ["json", "mongodb_pool"] }
# rocket_cors = "0.5.1"
# rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "mongodb_pool"] }
bson = "1.0.0"
mongodb = "1.0.0"
# juniper = "0.14"
# juniper_rocket = "0.5"
juniper= { git="https://github.com/graphql-rust/juniper.git", rev="84c9720b535c37dfc1d8bc6b142bf2f63e5fd16" }
# juniper_rocket_async = { git="https://github.com/graphql-rust/juniper.git", rev="7e8724751f1264215068d66c91cc384884142caf" }
# stripe-rust = { version = "0.12.1", default-features = false, features = ["full", "async"] }
stripe-rust = { version = "0.12.1", default-features = false, features = ["full", "async", "default-tls", "events"], git = "https://github.com/grantperry/stripe-rs.git", branch = "payment-intent-update-payment-method" }
rand = "0.7"
lettre = "0.9"
lettre_email = "0.9"
askama = "0.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
env_logger = "0.7.1"
