[package]
name = "rego-api"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libmmtapi"

[[bin]]
path = "src/bin/main.rs"
name = "rego-api"

[dependencies]
# mmt = { git = "https://github.com/NormanhurstRoverCrew/mmt-web2020.git" }
mmt = { path = "../mmt" }
# rocket = "0.4.2"
# rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false }
# rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false, features = ["json", "mongodb_pool"] }
# rocket_cors = "0.5.1"
# rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "mongodb_pool"] }
bson = "=2.0.0-beta"
mongodb = "=2.0.0-beta"
# juniper = "0.14"
# juniper_rocket = "0.5"
# juniper= { git="https://github.com/graphql-rust/juniper.git", rev="84c9720b535c37dfc1d8bc6b142bf2f63e5fd16" }
# juniper = "0.15"
juniper = { git = "https://github.com/grantperry/juniper.git", branch = "bson2" }
# juniper_rocket_async = { git="https://github.com/graphql-rust/juniper.git", rev="7e8724751f1264215068d66c91cc384884142caf" }
# stripe-rust = { version = "0.12.1", default-features = false, features = ["full", "async"] }
#stripe-rust = { version = "0.12.3", default-features = false, features = ["full", "async", "default-tls", "events"], git = "https://github.com/grantperry/stripe-rs.git", branch = "payment-intent-update-payment-method" }
async-stripe = { version = "0.13.0-rc3", default-features = false, features = ["runtime-tokio-hyper", "webhook-events", "checkout", "billing"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tonic = "0.4"

actix-web = "4.0.0-beta.6"
actix-rt = "2"
# actix-cors = "0.6.0-beta.1"
actix-cors = { git = "https://github.com/near/actix-extras.git", branch = "actix-web-4-beta.6" }
env_logger = "0.7.1"
async-trait = "0.1"
validator = "0.13"
