[package]
name = "rego"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
yew = "0.18"
yew-router = "0.15"
serde = "1.0"
serde_json = "1.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client.git" }
graphql_client_web = { git = "https://github.com/graphql-rust/graphql-client.git" }
wasm-bindgen-futures = "0.4"
futures = "0.3"
querystring = "1.1"
anyhow = "1.0"
url = "2.2"
js-sys = "0.3"


# server
rocket = { version = "0.4", optional = true }
rocket_contrib = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
"Window",
"Location"
]

[features]
server = ["rocket", "rocket_contrib"]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
