[package]
name = "rego"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
yew = { version = "0.18", optional = true }
yew-router = { version = "0.15", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client.git", optional = true }
graphql_client_web = { git = "https://github.com/graphql-rust/graphql-client.git", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
querystring = { version = "1.1", optional = true }
anyhow = { version = "1.0", optional = true }
url = { version = "2.2", optional = true }
js-sys = { version = "0.3", optional = true }


# server
rocket = { version = "0.4", optional = true }
rocket_contrib = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
"Window",
"Location"
]

[features]
server = ["rocket", "rocket_contrib"]
app = ["wasm-bindgen", "yew", "yew-router", "serde", "serde_json", "graphql_client", "graphql_client_web", "wasm-bindgen-futures", "futures", "querystring", "anyhow", "url", "js-sys", "web-sys"]

# [profile.release]
# # less code to include into binary
# panic = 'abort' 
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 'z' 
# # optimization for size 
# # opt-level = 's' 
# # link time optimization using using whole-program analysis
# lto = true
