[package]
name = "event"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.94"
serde = "1.0.94"
rocket = "0.4.7"
rocket_contrib = "0.4.2"
serde_json = "1.0"
